(lang dune 3.20)

(name algorithms)

(generate_opam_files true)

(source
 (github Smilin-Dominator/ocaml-learning-and-testing))

(authors "Devisha Padmaperuma <devisha.padmaperuma@gmail.com>")

(maintainers "Devisha Padmaperuma <devisha.padmaperuma@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name algorithms)
 (synopsis "Algorithm Test in OCaml")
 (description "Learning the language")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
